src/Common/Tests/Error/Makefile.win32
# Copyright (C) 2006-2008 Daniel Prevost <dprevost@users.sourceforge.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

include ..\Makefile.inc.Win32

all: 

CLEANFILES = *~ 

check_PROGRAMS =                       \
   .\Release\AddHandlerNullDef.exe     \
   .\Release\AddHandlerNullHandler.exe \
   .\Release\AddHandlerNullName.exe    \
   .\Release\AddHandlerPass.exe        \
   .\Release\AnyErrorNullError.exe     \
   .\Release\AnyErrorPass.exe          \
   .\Release\ChainErrorNullDef.exe     \
   .\Release\ChainErrorNullHandler.exe \
   .\Release\ChainErrorInvalidSig.exe  \
   .\Release\ChainErrorNoSetError.exe  \
   .\Release\ChainErrorTooMany.exe     \
   .\Release\ChainErrorPass.exe        \
   .\Release\FiniInvalidSig.exe        \
   .\Release\FiniNullError.exe         \
   .\Release\FiniPass.exe              \
   .\Release\GetErrorInvalidSig.exe    \
   .\Release\GetErrorNullError.exe     \
   .\Release\GetErrorNullMsg.exe       \
   .\Release\GetErrorZeroLength.exe    \
   .\Release\GetLastNullError.exe      \
   .\Release\GetLastPass.exe           \
   .\Release\GetLengthNullError.exe    \
   .\Release\GetLengthPass.exe         \
   .\Release\InitNoInitDefs.exe        \
   .\Release\InitNullError.exe         \
   .\Release\InitPass.exe              \
   .\Release\SetErrorInvalidSig.exe    \
   .\Release\SetErrorInvalidValue.exe  \
   .\Release\SetErrorNullError.exe     \
   .\Release\Tests.exe                 

check_PROGRAMS_DEBUG = $(check_PROGRAMS:.\Release\=.\Debug\)

check: $(OUTDIR) $(check_PROGRAMS)
	cscript RunTests.vbs --path=Release $(VBS_VERBOSE)

checkdebug: $(OUTDIR_DEBUG) $(check_PROGRAMS_DEBUG) 
	cscript RunTests.vbs --path=Debug $(VBS_VERBOSE)

clean: 
	-@erase /Q Debug\Tests
	-@rmdir /Q Debug\Tests
	-@erase /Q Debug
	-@rmdir /Q Debug
	-@erase /Q Release\Tests
	-@rmdir /Q Release\Tests
	-@erase /Q Release
	-@rmdir /Q Release
	-@erase /Q ProjectFiles\*.dep
	-@erase /Q ProjectFiles\*.plg
	-@erase /Q ProjectFiles\*.mak
	-@erase /Q $(CLEANFILES)

